--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "Duong Tran",
   "license": "ISC",
   "devDependencies": {
+    "@types/dotenv": "4.0.3",
     "@types/express": "4.16.0",
+    "@types/mongoose": "5.2.7",
+    "@types/winston": "2.4.4",
     "nodemon": "1.18.3",
     "tslint": "5.11.0",
     "tslint-config-prettier": "1.15.0",
@@ -18,6 +21,7 @@
   "dependencies": {
     "dotenv": "6.0.0",
     "express": "4.16.3",
-    "mongoose": "5.2.9"
+    "mongoose": "5.2.9",
+    "winston": "3.0.0"
   }
 }
