--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "esModuleInterop": true,
-    "target": "es6",
+    "target": "es5",
     "strict": true,
     "sourceMap": true,
     "removeComments": true,
@@ -13,10 +13,11 @@
     "noUnusedLocals": true,
     "allowSyntheticDefaultImports": true,
     "paths": {
-      "*": ["node_modules/*", "src/types/*"]
+      "*": ["node_modules/*", "src/types/*"],
+      "src/*": ["src/*"]
     },
     "lib": ["es2015", "es7"]
   },
-  "include": ["src/**/*"],
+  "include": ["./src/**/*"],
   "compileOnSave": true
 }
