--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "dotenv": "6.0.0",
     "express": "4.16.3",
     "mongoose": "5.2.9",
-    "winston": "3.0.0"
+    "winston": "3.0.0",
+    "module-alias": "2.1.0"
+  },
+  "_moduleAliases": {
+    "src": "dist"
   }
 }
