--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@types/dotenv": "4.0.3",
     "@types/express": "4.16.0",
+    "@types/jsonwebtoken": "7.2.8",
     "@types/mongoose": "5.2.7",
     "@types/winston": "2.4.4",
     "nodemon": "1.18.3",
@@ -19,11 +20,13 @@
     "typescript": "3.0.1"
   },
   "dependencies": {
+    "body-parser": "1.18.3",
     "dotenv": "6.0.0",
     "express": "4.16.3",
+    "jsonwebtoken": "8.3.0",
+    "module-alias": "2.1.0",
     "mongoose": "5.2.9",
-    "winston": "3.0.0",
-    "module-alias": "2.1.0"
+    "winston": "3.0.0"
   },
   "_moduleAliases": {
     "src": "dist"
