--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@types/dotenv": "4.0.3",
     "@types/express": "4.16.0",
+    "@types/helmet": "0.0.42",
     "@types/jsonwebtoken": "7.2.8",
     "@types/mongoose": "5.2.7",
     "@types/winston": "2.4.4",
@@ -23,6 +24,7 @@
     "body-parser": "1.18.3",
     "dotenv": "6.0.0",
     "express": "4.16.3",
+    "helmet": "3.14.0",
     "jsonwebtoken": "8.3.0",
     "module-alias": "2.1.0",
     "mongoose": "5.2.9",
